<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"
    tools:context=".DisplaySearchResults">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="115dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whiteaways" />

    <TextView
        android:id="@+id/room_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="208dp"
        android:text="@string/room_id"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="95dp"
        android:text="@string/floor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/display_floor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_id" />

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:text="@string/room_size"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/display_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floor" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="84dp"
        android:text="@string/room_status"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/display_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/room_description"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/display_room_id"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:text="@string/display_room_id"
        app:layout_constraintBaseline_toBaselineOf="@+id/room_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/room_id" />

    <TextView
        android:id="@+id/display_floor"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="84dp"
        android:text="@string/display_floor"
        app:layout_constraintBaseline_toBaselineOf="@+id/floor"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/display_size"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="84dp"
        android:text="@string/display_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/size"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/display_status"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="84dp"
        android:text="@string/display_status"
        app:layout_constraintBaseline_toBaselineOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/display_room_description"
        android:layout_width="214dp"
        android:layout_height="125dp"
        android:text="@string/display_room_description"
        app:layout_constraintBaseline_toBaselineOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toEndOf="@+id/description" />

</android.support.constraint.ConstraintLayout>