<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"
    tools:context=".AddNewRoom">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="115dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whiteaways" />

    <TextView
        android:id="@+id/roomID"
        android:layout_width="87dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="160dp"
        android:text="@string/room_id"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/room_size"
        android:layout_width="104dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/room_size"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/input_room_size"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floor" />

    <TextView
        android:id="@+id/description"
        android:layout_width="106dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/room_description"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/room_description"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_size" />

    <TextView
        android:id="@+id/room_price"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/price"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/input_room_price"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/submit"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_room_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/input_room_id"
        app:layout_constraintBaseline_toBaselineOf="@+id/roomID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/roomID" />

    <EditText
        android:id="@+id/room_description"
        android:layout_width="wrap_content"
        android:layout_height="97dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName|text"
        android:text="@string/input_room_description"
        app:layout_constraintBaseline_toBaselineOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/description" />

    <EditText
        android:id="@+id/input_room_price"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_price"
        app:layout_constraintBaseline_toBaselineOf="@+id/room_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/room_price" />

    <TextView
        android:id="@+id/floor"
        android:layout_width="84dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/floor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/input_room_floor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomID" />

    <EditText
        android:id="@+id/input_room_floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_floor"
        app:layout_constraintBaseline_toBaselineOf="@+id/floor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floor" />

    <EditText
        android:id="@+id/input_room_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/room_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/room_size" />


</android.support.constraint.ConstraintLayout>